Clean up diagstatus-impl
Fix up warnings reported by error-prone.

Change-Id: Idb53884cfca14df93a7d280e4cec4dd7d16655b6
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>